# kopdes-backend

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: heroku-deploy.yml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  dashboards.py  (+6 more)
app/core/: cache.py  config.py  database.py  logging.py  security.py
app/etl/: extract_dashboard_data.py
app/repositories/: anggota_repository.py  aset_repository.py  dokumen_repository.py  etl_repository.py  gerai_repository.py  kemitraan_repository.py  koperasi_repository.py  lookup_repository.py  pembiayaan_repository.py  potensi_desa_repository.py  produk_repository.py  rat_repository.py  schema_repository.py  simpanan_repository.py  summary_repository.py  transaksi_repository.py  ui_backup_repository.py
app/schemas/: common.py  dashboard.py  filters.py
app/services/: access_scope_service.py  dashboard_common_service.py  data_freshness_service.py  etl_service.py  kepala_desa_dashboard_service.py  komi_context_service.py  komi_correlation_service.py  komi_export_service.py  komi_llm_service.py  komi_safety_service.py  pengurus_dashboard_service.py  satgas_dashboard_service.py
app/utils/: date_utils.py  number_utils.py  privacy.py  response.py  safe_sql.py
docs/: api.md  dashboard_contract.md  db_mapping.generated.md  etl_design.md  heroku_cicd.md  performance_notes.md  role_scope_matrix.md  single_pov_scope_analysis.md  summary_tables.md  ui_screenshot_db_mapping.md
migrations/: 001_group9_summary_tables.sql
tests/: test_komi_phase4.py  test_smoke.py
(+17 files in other folders)
